--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,8 @@
 {
-  "short_name": "React App",
-  "name": "React Extension",
+  "short_name": "Search Manager",
+  "name": "Better Search Manager",
   "manifest_version": 2,
   "browser_action": {
-    "default_popup": "index.html",
     "default_title": "React Ext"
   },
   "background": {
