Remove react icon from top, override new tab, and change title to Search Manager

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,9 @@
       "description": "Show the SearchManager"
     }
   },
+  "chrome_url_overrides": {
+    "newtab": "index.html"
+  },
   "permissions": ["tabs","storage"],
   "version": "1.0"
 }
